# middleware/authMiddleware.js
@@ -13,6 +13,24 @@ const auth = (req, res, next) => {
   }
 };
 
+const optionalAuth = (req, res, next) => {
+  const token = req.headers.authorization?.split(" ")[1];
+
+  if (!token) {
+    return next(); // guest user
+  }
+
+  try {
+    const decoded = jwt.verify(token, process.env.JWT_SECRET);
+
+    req.user = decoded;
+  } catch (err) {
+    console.log("Invalid token");
+  }
+
+  next();
+};
+
 const adminOnly = (req, res, next) => {
   if (req.user.role !== "admin")
     return res.status(403).json({ message: "Admin only" });
@@ -20,4 +38,4 @@ const adminOnly = (req, res, next) => {
   next();
 };
 
-module.exports = { auth, adminOnly };
+module.exports = { auth, optionalAuth, adminOnly };
